# go1-commerce

./: .gitignore  README.md  pyproject.toml
go1_commerce/: hooks.py  modules.txt
go1_commerce/accounts/: api.py  api_bkp.py  defaults.py
go1_commerce/go1_commerce/: after_install.py  api.py  override.py  pricing.py
go1_commerce/go1_commerce/custom/: country.json  newsletter.json  notification.json  workflow_state.json
go1_commerce/go1_commerce/default_data/: accounts.json  default_catalog.json  media_setting.json  mode_of_payment.json  order_status.json  pages.json  party_type.json  payment_method.json  reference.json  return_request_reason.json  return_request_status.json  roles.json  shipping_methods.json  shipping_rate_methods.json  shipping_status.json  specification_attributes.json  tax_template.json
go1_commerce/go1_commerce/help_desk/: help_article.json
go1_commerce/go1_commerce/v2/: builder_page.py  cart.py  cart1.py  category.py  category1.py  checkout.py  common.py  customer.py  masters.py  orders.py  product.py  product_bkp.py  whoosh.py
go1_commerce/public/: build.json  customers_import_template.xlsx  product_import_template.xlsx
go1_commerce/public/css/: console.css  lightgallery.css  select_list.css  toggle-slider.css  uppy_uploaders.css  vertical-tab.css
go1_commerce/public/js/: common.js  console.js  (+12 more)
go1_commerce/templates/: mini_shopping_cart.html  mini_wishlist.html
go1_commerce/utils/: backups.py  domain_setup.py  google_indexing.py  google_maps.py  restore.py  setup.py  setup_wizard.py  utils.py
go1_commerce/www/: email_group.js
(+857 files in other folders)
