[project]
name = "go1_commerce"
authors = [
    { name = "Tridotstech PVT LTD", email = "info@tridotstech.com"}
]
description = "Go1 Commerce is an Open Source eCommerce portal built on frappe framework."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
